[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "flask>=3.1.1",
    "motor>=3.7.1",
    "pymongo>=4.14.0",
    "pyrogram>=2.0.106",
    "requests>=2.32.4",
    "tgcrypto>=1.2.5",
]
